# CollectiveProviderGuide

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  manage.py  pyproject.toml  timelog.md
backend/: .flake8  manage.py  pyproject.toml
backend/bghc/: apps.py  urls.py  views.py
backend/bghc/templates/bghc/: index.html
backend/directory/: views.py
backend/provider_guide/: settings.py
backend/thcnp/: apps.py  urls.py  views.py
backend/thcnp/templates/thcnp/: login.html  signup.html
bghc/: context_processors.py  views.py
bghc/locale/de/LC_MESSAGES/: django.po
bghc/templates/bghc/: login.html  signup.html
directory/: forms.py
directory/templates/directory/: dashboard.html
doc/: data_design.md
frontend/: package-lock.json  package.json
provider_guide/: asgi.py  settings.py  urls.py  views.py  wsgi.py
thcnp/: context_processors.py  views.py
