[tool.poetry]
name = "CollectiveProviderGuide"
version = "0.1.0"
description = "A web application to find health care providers."
authors = ["Travis Hein <marsairforce@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
coverage = "^7.5.1"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
